fix imgaes not showing on github

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -44,7 +44,7 @@ body {
 
 main,
 .index {
-  background-image: url(../assets/home/background-home-desktop.jpg);
+  background-image: url(../assets/home/background-home-desktop.JPG);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -57,7 +57,7 @@ main,
 }
 
 .destination-page {
-  background-image: url(../assets/destination/background-destination-desktop.jpg);
+  background-image: url(../assets/destination/background-destination-desktop.JPG);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -70,7 +70,7 @@ main,
 }
 
 .crew-page {
-  background-image: url(../assets/crew/background-crew-desktop.jpg);
+  background-image: url(../assets/crew/background-crew-desktop.JPG);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -83,7 +83,7 @@ main,
 }
 
 .technology-page {
-  background-image: url(../assets/technology/background-technology-desktop.jpg);
+  background-image: url(../assets/technology/background-technology-desktop.JPG);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
